[package]
name = "betting_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "*"
features = ["bundled"]

[dependencies]
itertools = "*"
serenity = { version = "*", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"unstable_discord_api",
	"cache",
] }
serde_json = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
shellwords = "*"
