[package]
name = "betting_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "*"
betting = "*"
chrono = "*"
confy = "*"
env_logger = "*"
itertools = "*"
lazy_static = "*"
log = "*"
rusqlite = { version = "*", features = ["bundled"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serenity = { version = "*", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
	"unstable_discord_api",
	"cache",
] }
db-map = "*"
serenity-utils = { git = "https://github.com/Inspirateur/serenity-utils.git" }
shellwords = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
